{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 18,
  "lineage": "82d619c3-751e-0de4-f1c6-7594e9796f12",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543816070942:internet-gateway/igw-0425fa8bfcb289d30",
            "id": "igw-0425fa8bfcb289d30",
            "owner_id": "543816070942",
            "region": "us-east-1",
            "tags": {
              "Name": "retail-eks-public-igw"
            },
            "tags_all": {
              "Name": "retail-eks-public-igw"
            },
            "vpc_id": "vpc-079ccc72b9811baed"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0425fa8bfcb289d30",
            "id": "r-rtb-00ba187b0da0d7c231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-00ba187b0da0d7c23",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543816070942:route-table/rtb-00ba187b0da0d7c23",
            "id": "rtb-00ba187b0da0d7c23",
            "owner_id": "543816070942",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "retail-eks-public-public-rt"
            },
            "tags_all": {
              "Name": "retail-eks-public-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-079ccc72b9811baed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b58c62907abb10a",
            "region": "us-east-1",
            "route_table_id": "rtb-00ba187b0da0d7c23",
            "subnet_id": "subnet-0105e107545d41c61"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fa31c216464e92f",
            "region": "us-east-1",
            "route_table_id": "rtb-00ba187b0da0d7c23",
            "subnet_id": "subnet-08cbf8a7dddee774d"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543816070942:subnet/subnet-0105e107545d41c61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0105e107545d41c61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "543816070942",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "retail-eks-public-public-0"
            },
            "tags_all": {
              "Name": "retail-eks-public-public-0"
            },
            "vpc_id": "vpc-079ccc72b9811baed"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543816070942:subnet/subnet-08cbf8a7dddee774d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cbf8a7dddee774d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "543816070942",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "retail-eks-public-public-1"
            },
            "tags_all": {
              "Name": "retail-eks-public-public-1"
            },
            "vpc_id": "vpc-079ccc72b9811baed"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543816070942:vpc/vpc-079ccc72b9811baed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ea28ca1ab5b2b39",
            "default_route_table_id": "rtb-00ce1f95f3b14e70c",
            "default_security_group_id": "sg-0e7ede7aa4ed2918c",
            "dhcp_options_id": "dopt-32995c57",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-079ccc72b9811baed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ce1f95f3b14e70c",
            "owner_id": "543816070942",
            "region": "us-east-1",
            "tags": {
              "Name": "retail-eks-public-vpc"
            },
            "tags_all": {
              "Name": "retail-eks-public-vpc"
            }
          }
        }
      ]
    }
  ]
}